no histroy for you\!
git-svn-id: file:///srv/svn/publican/trunk@1589 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/po/de.po
+++ b/publican/po/de.po
@@ -644,7 +644,7 @@ msgstr ""
 
 #. ($in_date)
 #: lib/Publican/Builder.pm:2021
-msgid "Invalid date: '%1' in revision histroy."
+msgid "Invalid date: '%1' in revision history."
 msgstr ""
 
 #. ($key,$value,$constraint)
@@ -704,7 +704,7 @@ msgstr ""
 #: lib/Publican/Builder.pm:2006 lib/Publican/Builder.pm:2015
 #: lib/Publican/Builder.pm:2027 lib/Publican/Builder.pm:2035
 #: lib/Publican/Builder.pm:2043 lib/Publican/Builder.pm:2050
-msgid "Missing mandatory field '%1' in revision histroy."
+msgid "Missing mandatory field '%1' in revision history."
 msgstr ""
 
 #. ('member')
