--- a/publican/po/es.po
+++ b/publican/po/es.po
@@ -648,7 +648,7 @@ msgstr "Petición de construcción no válida: no existen archivos PO en el idio
 
 #. ($in_date)
 #: lib/Publican/Builder.pm:2021
-msgid "Invalid date: '%1' in revision histroy."
+msgid "Invalid date: '%1' in revision history."
 msgstr "Fecha inválida: '%1' en el historial de revisiones."
 
 #. ($key,$value,$constraint)
@@ -711,7 +711,7 @@ msgstr "Fusionando %1 >> %2 -> %3"
 #: lib/Publican/Builder.pm:2035
 #: lib/Publican/Builder.pm:2043
 #: lib/Publican/Builder.pm:2050
-msgid "Missing mandatory field '%1' in revision histroy."
+msgid "Missing mandatory field '%1' in revision history."
 msgstr "No se encuentra el campo obligatorio '%1' en el historial de revisiones."
 
 #. ('member')
