--- a/publican/po/publican.pot
+++ b/publican/po/publican.pot
@@ -641,7 +641,7 @@ msgstr ""
 
 #. ($in_date)
 #: lib/Publican/Builder.pm:2021
-msgid "Invalid date: '%1' in revision histroy."
+msgid "Invalid date: '%1' in revision history."
 msgstr ""
 
 #. ($key,$value,$constraint)
@@ -704,7 +704,7 @@ msgstr ""
 #: lib/Publican/Builder.pm:2035
 #: lib/Publican/Builder.pm:2043
 #: lib/Publican/Builder.pm:2050
-msgid "Missing mandatory field '%1' in revision histroy."
+msgid "Missing mandatory field '%1' in revision history."
 msgstr ""
 
 #. ('member')
