--- a/publican/po/pl.po
+++ b/publican/po/pl.po
@@ -698,7 +698,7 @@ msgstr ""
 
 #. ($in_date)
 #: lib/Publican/Builder.pm:2021
-msgid "Invalid date: '%1' in revision histroy."
+msgid "Invalid date: '%1' in revision history."
 msgstr "Nieprawidłowa data: \"%1\" w historii wersji."
 
 #. ($key,$value,$constraint)
@@ -758,7 +758,7 @@ msgstr "Łączenie %1 >> %2 -> %3"
 #: lib/Publican/Builder.pm:2006 lib/Publican/Builder.pm:2015
 #: lib/Publican/Builder.pm:2027 lib/Publican/Builder.pm:2035
 #: lib/Publican/Builder.pm:2043 lib/Publican/Builder.pm:2050
-msgid "Missing mandatory field '%1' in revision histroy."
+msgid "Missing mandatory field '%1' in revision history."
 msgstr "Brak obowiązkowego pola \"%1\" w historii wersji."
 
 #. ('member')
