--- a/publican/po/uk.po
+++ b/publican/po/uk.po
@@ -628,7 +628,7 @@ msgstr "Некоректний запит щодо збирання: не зна
 
 #. ($in_date)
 #: lib/Publican/Builder.pm:2021
-msgid "Invalid date: '%1' in revision histroy."
+msgid "Invalid date: '%1' in revision history."
 msgstr "Некоректна дата, «%1», у журналі версій."
 
 #. ($key,$value,$constraint)
@@ -688,7 +688,7 @@ msgstr "Об’єднання %1 >> %2 -> %3"
 #: lib/Publican/Builder.pm:2006 lib/Publican/Builder.pm:2015
 #: lib/Publican/Builder.pm:2027 lib/Publican/Builder.pm:2035
 #: lib/Publican/Builder.pm:2043 lib/Publican/Builder.pm:2050
-msgid "Missing mandatory field '%1' in revision histroy."
+msgid "Missing mandatory field '%1' in revision history."
 msgstr "Пропущено обов’язкове поле «%1» у журналі версій."
 
 #. ('member')
