Fix fi-FI translation
git-svn-id: file:///srv/svn/publican/trunk@1615 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/datadir/Common_Content/common/fi-FI/Conventions.po
+++ b/publican/datadir/Common_Content/common/fi-FI/Conventions.po
@@ -133,18 +133,15 @@ msgstr ""
 msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr ""
 "Erikoismerkin lisäämiseksi <application>gedit</application>-tiedostoon "
-"valitse <menuchoice><guimenu>Sovellukset</guimenu><guisubmenu>Apuohjelmat</g"
-"uisubmenu><guimenuitem>Merkkikartta</guimenuitem></menuchoice> "
-"valikkopalkista. Valitse seuraavaksi <menuchoice><guimenu>Etsi</guimenu><gui"
-"menuitem>Etsi&hellip;</guimenuitem></menuchoice> "
+"valitse <menuchoice><guimenu>Sovellukset</guimenu><guisubmenu>Apuohjelmat</guisubmenu><guimenuitem>Merkkikartta</guimenuitem></menuchoice> "
+"valikkopalkista. Valitse seuraavaksi <menuchoice><guimenu>Etsi</guimenu><guimenuitem>Etsi&hellip;</guimenuitem></menuchoice> "
 "<application>Merkkikartta</application>-ohjelman valikkopalkista, kirjoita "
 "merkin nimi <guilabel>Etsi</guilabel>-kenttään ja napsauta "
 "<guibutton>Seuraava</guibutton>. Etsimäsi merkki korostetaan "
 "<guilabel>Merkkikartassa</guilabel>. Kaksoisnapsauta korostettua merkkiä, "
 "jolloin se siirtyy <guilabel>Kopioitava teksti</guilabel> -kenttään ja "
 "napsauta sitten <guibutton>Kopioi</guibutton>-painiketta. Vaihda nyt "
-"takaisin asiakirjaan ja valitse <menuchoice><guimenu>Muokkaa</guimenu><guime"
-"nuitem>Liitä</guimenu></menuchoice> <application>geditin</application> "
+"takaisin asiakirjaan ja valitse <menuchoice><guimenu>Muokkaa</guimenu><guimenuitem>Liitä</guimenuitem></menuchoice> <application>geditin</application> "
 "valikkopalkista."
 
 #. Tag: para
