--- a/publican/datadir/Common_Content/common/fi-FI/Conventions.po
+++ b/publican/datadir/Common_Content/common/fi-FI/Conventions.po
@@ -4,14 +4,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-09-29T05:30:03\n"
+"POT-Creation-Date: 2010-12-01T22:56:38\n"
 "PO-Revision-Date: 2010-10-27 11:36+0300\n"
 "Last-Translator: Ville-Pekka Vainio <vpivaini@cs.helsinki.fi>\n"
 "Language-Team: Finnish <gnome-fi-laatu@lists.sourceforge.net>\n"
-"Language: fi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: application/x-xml2pot; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: fi\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Virtaal 0.6.1\n"
 
@@ -48,10 +48,7 @@ msgstr "<literal>Tasavälinen lihavoitu</literal>"
 #. Tag: para
 #, no-c-format
 msgid "Used to highlight system input, including shell commands, file names and paths. Also used to highlight keycaps and key combinations. For example:"
-msgstr ""
-"Käytetään järjestelmälle annettavan syötteen korostamiseen, mukaan lukien "
-"komentokehotteen komennot, tiedostonimet ja polut. Käytetään myös "
-"korostamaan näppäinten nimiä ja näppäinyhdistelmiä. Esimerkiksi:"
+msgstr "Käytetään järjestelmälle annettavan syötteen korostamiseen, mukaan lukien komentokehotteen komennot, tiedostonimet ja polut. Käytetään myös korostamaan näppäinten nimiä ja näppäinyhdistelmiä. Esimerkiksi:"
 
 #. Tag: para
 #, no-c-format
@@ -61,16 +58,12 @@ msgstr "Nykyisessä työhakemistossa olevan tiedoston <filename>seuraava_menesty
 #. Tag: para
 #, no-c-format
 msgid "The above includes a file name, a shell command and a keycap, all presented in mono-spaced bold and all distinguishable thanks to context."
-msgstr ""
-"Yllä oleva esimerkki sisältää tiedostonimen, komentokehotekomennon ja "
-"näppäimen nimen, kaikki esitettynä tasavälisellä lihavoidulla kirjasimella."
+msgstr "Yllä oleva esimerkki sisältää tiedostonimen, komentokehotekomennon ja näppäimen nimen, kaikki esitettynä tasavälisellä lihavoidulla kirjasimella."
 
 #. Tag: para
 #, no-c-format
 msgid "Key combinations can be distinguished from keycaps by the hyphen connecting each part of a key combination. For example:"
-msgstr ""
-"Näppäinyhdistelmät voi erottaa näppäinten nimistä näppäinyhdistelmän osia "
-"yhdistävän väliviivan ansiosta. Esimerkiksi:"
+msgstr "Näppäinyhdistelmät voi erottaa näppäinten nimistä näppäinyhdistelmän osia yhdistävän väliviivan ansiosta. Esimerkiksi:"
 
 #. Tag: para
 #, no-c-format
@@ -85,18 +78,12 @@ msgstr "Paina <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</key
 #. Tag: para
 #, no-c-format
 msgid "The first paragraph highlights the particular keycap to press. The second highlights two key combinations (each a set of three keycaps with each set pressed simultaneously)."
-msgstr ""
-"Ensimmäinen lause korostaa painettavan näppäimen nimeä. Toinen korostaa "
-"kahta kolmen näppäimen sarjaa, jotka on tarkoitettu painettavaksi yhtä "
-"aikaa."
+msgstr "Ensimmäinen lause korostaa painettavan näppäimen nimeä. Toinen korostaa kahta kolmen näppäimen sarjaa, jotka on tarkoitettu painettavaksi yhtä aikaa."
 
 #. Tag: para
 #, no-c-format
 msgid "If source code is discussed, class names, methods, functions, variable names and returned values mentioned within a paragraph will be presented as above, in <literal>mono-spaced bold</literal>. For example:"
-msgstr ""
-"Jos käsitellään lähdekoodia, kappaleen sisällä mainitut luokkanimet, "
-"metodit, funktiot, muuttujien nimet ja palautusarvot esitetään kuten yllä, "
-"<literal>tasavälisellä lihavoidulla kirjasimella</literal>. Esimerkiksi:"
+msgstr "Jos käsitellään lähdekoodia, kappaleen sisällä mainitut luokkanimet, metodit, funktiot, muuttujien nimet ja palautusarvot esitetään kuten yllä, <literal>tasavälisellä lihavoidulla kirjasimella</literal>. Esimerkiksi:"
 
 #. Tag: para
 #, no-c-format
@@ -111,46 +98,22 @@ msgstr "<application>Suhteellinen lihavoitu</application>"
 #. Tag: para
 #, no-c-format
 msgid "This denotes words or phrases encountered on a system, including application names; dialog box text; labeled buttons; check-box and radio button labels; menu titles and sub-menu titles. For example:"
-msgstr ""
-"Tämä merkitsee järjestelmään liittyviä sanoja tai lauseita, mukaan lukien "
-"ohjelmien nimet, valintaikkunoiden tekstit, painikkeiden nimet, "
-"valintaruutujen ja -nappien nimet sekä valikkokohdat. Esimerkiksi:"
+msgstr "Tämä merkitsee järjestelmään liittyviä sanoja tai lauseita, mukaan lukien ohjelmien nimet, valintaikkunoiden tekstit, painikkeiden nimet, valintaruutujen ja -nappien nimet sekä valikkokohdat. Esimerkiksi:"
 
 #. Tag: para
 #, no-c-format
 msgid "Choose <menuchoice><guimenu>System</guimenu><guisubmenu>Preferences</guisubmenu><guimenuitem>Mouse</guimenuitem></menuchoice> from the main menu bar to launch <application>Mouse Preferences</application>. In the <guilabel>Buttons</guilabel> tab, click the <guilabel>Left-handed mouse</guilabel> check box and click <guibutton>Close</guibutton> to switch the primary mouse button from the left to the right (making the mouse suitable for use in the left hand)."
-msgstr ""
-"Valitse <menuchoice><guimenu>Järjestelmä</guimenu><guisubmenu>Asetukset</gui"
-"submenu><guimenuitem>Hiiri</guimenuitem></menuchoice> valikkopalkista "
-"<application>Hiiriasetukset</application>-ohjelman käynnistämiseksi. "
-"Napsauta <guilabel>Näppäimet</guilabel>-välilehdessä <guilabel>Vasenkätinen "
-"hiiri</guilabel> -valintaruutua ja napsauta <guibutton>Sulje</guibutton>. "
-"Näin saat vaihdettua hiiren ensisijaisen näppäimen vasemmalta oikealle, "
-"jolloin hiirtä on helpompi käyttää vasemmalla kädellä."
+msgstr "Valitse <menuchoice><guimenu>Järjestelmä</guimenu><guisubmenu>Asetukset</guisubmenu><guimenuitem>Hiiri</guimenuitem></menuchoice> valikkopalkista <application>Hiiriasetukset</application>-ohjelman käynnistämiseksi. Napsauta <guilabel>Näppäimet</guilabel>-välilehdessä <guilabel>Vasenkätinen hiiri</guilabel> -valintaruutua ja napsauta <guibutton>Sulje</guibutton>. Näin saat vaihdettua hiiren ensisijaisen näppäimen vasemmalta oikealle, jolloin hiirtä on helpompi käyttää vasemmalla kädellä."
 
 #. Tag: para
 #, no-c-format
 msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
-msgstr ""
-"Erikoismerkin lisäämiseksi <application>gedit</application>-tiedostoon "
-"valitse <menuchoice><guimenu>Sovellukset</guimenu><guisubmenu>Apuohjelmat</guisubmenu><guimenuitem>Merkkikartta</guimenuitem></menuchoice> "
-"valikkopalkista. Valitse seuraavaksi <menuchoice><guimenu>Etsi</guimenu><guimenuitem>Etsi&hellip;</guimenuitem></menuchoice> "
-"<application>Merkkikartta</application>-ohjelman valikkopalkista, kirjoita "
-"merkin nimi <guilabel>Etsi</guilabel>-kenttään ja napsauta "
-"<guibutton>Seuraava</guibutton>. Etsimäsi merkki korostetaan "
-"<guilabel>Merkkikartassa</guilabel>. Kaksoisnapsauta korostettua merkkiä, "
-"jolloin se siirtyy <guilabel>Kopioitava teksti</guilabel> -kenttään ja "
-"napsauta sitten <guibutton>Kopioi</guibutton>-painiketta. Vaihda nyt "
-"takaisin asiakirjaan ja valitse <menuchoice><guimenu>Muokkaa</guimenu><guimenuitem>Liitä</guimenuitem></menuchoice> <application>geditin</application> "
-"valikkopalkista."
+msgstr "Erikoismerkin lisäämiseksi <application>gedit</application>-tiedostoon valitse <menuchoice><guimenu>Sovellukset</guimenu><guisubmenu>Apuohjelmat</guisubmenu><guimenuitem>Merkkikartta</guimenuitem></menuchoice> valikkopalkista. Valitse seuraavaksi <menuchoice><guimenu>Etsi</guimenu><guimenuitem>Etsi&hellip;</guimenuitem></menuchoice> <application>Merkkikartta</application>-ohjelman valikkopalkista, kirjoita merkin nimi <guilabel>Etsi</guilabel>-kenttään ja napsauta <guibutton>Seuraava</guibutton>. Etsimäsi merkki korostetaan <guilabel>Merkkikartassa</guilabel>. Kaksoisnapsauta korostettua merkkiä, jolloin se siirtyy <guilabel>Kopioitava teksti</guilabel> -kenttään ja napsauta sitten <guibutton>Kopioi</guibutton>-painiketta. Vaihda nyt takaisin asiakirjaan ja valitse <menuchoice><guimenu>Muokkaa</guimenu><guimenuitem>Liitä</guimenuitem></menuchoice> <application>geditin</application> valikkopalkista."
 
 #. Tag: para
 #, no-c-format
 msgid "The above text includes application names; system-wide menu names and items; application-specific menu names; and buttons and text found within a GUI interface, all presented in proportional bold and all distinguishable by context."
-msgstr ""
-"Yllä oleva teksti sisältää ohjelmien nimiä, valikkonimiä sekä graafisen "
-"käyttöliittymän painikkeita ja tekstiä, kaikki esitettynä suhteellisella "
-"lihavoidulla kirjasimella."
+msgstr "Yllä oleva teksti sisältää ohjelmien nimiä, valikkonimiä sekä graafisen käyttöliittymän painikkeita ja tekstiä, kaikki esitettynä suhteellisella lihavoidulla kirjasimella."
 
 #. Tag: para
 #, no-c-format
@@ -160,11 +123,7 @@ msgstr "<command><replaceable>Tasavälinen lihavoitu kursiivi</replaceable></com
 #. Tag: para
 #, no-c-format
 msgid "Whether mono-spaced bold or proportional bold, the addition of italics indicates replaceable or variable text. Italics denotes text you do not input literally or displayed text that changes depending on circumstance. For example:"
-msgstr ""
-"Tasavälisen lihavoidun tai suhteellisen lihavoidun kirjasimen kursivointi "
-"ilmaisee korvattavaa tai vaihtuvaa tekstiä. Kursivointi ilmaisee tekstiä, "
-"jota ei syötetä sellaisenaan tai näytettävää tekstiä, joka muuttuu "
-"tilanteesta riippuen. Esimerkiksi:"
+msgstr "Tasavälisen lihavoidun tai suhteellisen lihavoidun kirjasimen kursivointi ilmaisee korvattavaa tai vaihtuvaa tekstiä. Kursivointi ilmaisee tekstiä, jota ei syötetä sellaisenaan tai näytettävää tekstiä, joka muuttuu tilanteesta riippuen. Esimerkiksi:"
 
 #. Tag: para
 #, no-c-format
@@ -184,12 +143,7 @@ msgstr "Asennetun paketin version näkee komennolla <command>rpm -q <replaceable
 #. Tag: para
 #, no-c-format
 msgid "Note the words in bold italics above &mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
-msgstr ""
-"Huomaa yllä olevat lihavoidulla kursiivilla kirjoitetut sanat &mdash; "
-"käyttäjätunnus, verkko.osoite, tiedostojärjestelmä, paketti, versio ja "
-"julkaisu. Jokainen sana on niin sanottu paikkamerkki, joka merkitsee joko "
-"paikkaa, johon tekstiä syötetään komentoa annettaessa tai järjestelmän "
-"näyttämää tekstiä."
+msgstr "Huomaa yllä olevat lihavoidulla kursiivilla kirjoitetut sanat &mdash; käyttäjätunnus, verkko.osoite, tiedostojärjestelmä, paketti, versio ja julkaisu. Jokainen sana on niin sanottu paikkamerkki, joka merkitsee joko paikkaa, johon tekstiä syötetään komentoa annettaessa tai järjestelmän näyttämää tekstiä."
 
 #. Tag: para
 #, no-c-format
@@ -209,16 +163,12 @@ msgstr "Lainauskäytännöt"
 #. Tag: para
 #, no-c-format
 msgid "Terminal output and source code listings are set off visually from the surrounding text."
-msgstr ""
-"Päätteen tulosteet ja ohjelmien lähdekoodi erotetaan visuaalisesti "
-"ympäröivästä tekstistä."
+msgstr "Päätteen tulosteet ja ohjelmien lähdekoodi erotetaan visuaalisesti ympäröivästä tekstistä."
 
 #. Tag: para
 #, no-c-format
 msgid "Output sent to a terminal is set in <computeroutput>mono-spaced roman</computeroutput> and presented thus:"
-msgstr ""
-"Päätteelle lähetettävä tuloste esitetään <computeroutput>tasavälisellä "
-"pystykirjasimella</computeroutput> seuraavasti:"
+msgstr "Päätteelle lähetettävä tuloste esitetään <computeroutput>tasavälisellä pystykirjasimella</computeroutput> seuraavasti:"
 
 #. Tag: screen
 #, no-c-format
@@ -232,10 +182,7 @@ msgstr ""
 #. Tag: para
 #, no-c-format
 msgid "Source-code listings are also set in <computeroutput>mono-spaced roman</computeroutput> but add syntax highlighting as follows:"
-msgstr ""
-"Lähdekoodilistauksissa käytetään myös <computeroutput>tasavälistä "
-"pystykirjasinta</computeroutput> mutta niihin lisätään syntaksin korostus "
-"seuraavasti:"
+msgstr "Lähdekoodilistauksissa käytetään myös <computeroutput>tasavälistä pystykirjasinta</computeroutput> mutta niihin lisätään syntaksin korostus seuraavasti:"
 
 #. Tag: programlisting
 #, no-c-format
@@ -298,10 +245,7 @@ msgstr "Huomautus"
 #. Tag: para
 #, no-c-format
 msgid "Notes are tips, shortcuts or alternative approaches to the task at hand. Ignoring a note should have no negative consequences, but you might miss out on a trick that makes your life easier."
-msgstr ""
-"Huomautus on vinkki, oikopolku tai erilainen lähestymistapa kyseiseen "
-"tehtävään. Huomautuksen ohittamisella ei pitäisi olla ikäviä seurauksia, "
-"mutta silloin saattaa ohittaa elämää helpottavan tempun."
+msgstr "Huomautus on vinkki, oikopolku tai erilainen lähestymistapa kyseiseen tehtävään. Huomautuksen ohittamisella ei pitäisi olla ikäviä seurauksia, mutta silloin saattaa ohittaa elämää helpottavan tempun."
 
 #. Tag: title
 #, no-c-format
@@ -311,12 +255,7 @@ msgstr "Tärkeää"
 #. Tag: para
 #, no-c-format
 msgid "Important boxes detail things that are easily missed: configuration changes that only apply to the current session, or services that need restarting before an update will apply. Ignoring a box labeled 'Important' will not cause data loss but may cause irritation and frustration."
-msgstr ""
-"Tärkeää-laatikot kertovat tarkkoja tietoja asioista, jotka on helppoa "
-"ohittaa, esimerkiksi vain nykyiseen istuntoon liittyvät asetusmuutokset tai "
-"palvelut jotka on käynnistettävä uudelleen päivityksen jälkeen. "
-"Tärkeää-laatikoiden ohittaminen ei aiheuta tietojen katoamista, mutta "
-"saattaa aiheuttaa ärsyyntymistä ja turhautumista."
+msgstr "Tärkeää-laatikot kertovat tarkkoja tietoja asioista, jotka on helppoa ohittaa, esimerkiksi vain nykyiseen istuntoon liittyvät asetusmuutokset tai palvelut jotka on käynnistettävä uudelleen päivityksen jälkeen. Tärkeää-laatikoiden ohittaminen ei aiheuta tietojen katoamista, mutta saattaa aiheuttaa ärsyyntymistä ja turhautumista."
 
 #. Tag: title
 #, no-c-format
@@ -326,9 +265,7 @@ msgstr "Varoitus"
 #. Tag: para
 #, no-c-format
 msgid "Warnings should not be ignored. Ignoring warnings will most likely cause data loss."
-msgstr ""
-"Varoitusta ei pitäisi ohittaa. Varoitusten ohittaminen aiheuttaa "
-"todennäköisesti tietojen katoamista."
+msgstr "Varoitusta ei pitäisi ohittaa. Varoitusten ohittaminen aiheuttaa todennäköisesti tietojen katoamista."
 
 #~ msgid "Proportional Bold"
 #~ msgstr "Suhteellinen lihavoitu"
