--- a/publican/datadir/Common_Content/common/fi-FI/Feedback.po
+++ b/publican/datadir/Common_Content/common/fi-FI/Feedback.po
@@ -3,14 +3,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 0\n"
-"POT-Creation-Date: 2010-09-28T06:49:34\n"
+"POT-Creation-Date: 2010-12-01T22:56:38\n"
 "PO-Revision-Date: 2010-10-30 20:41+0300\n"
 "Last-Translator: Ville-Pekka Vainio <vpivaini@cs.helsinki.fi>\n"
 "Language-Team: Finnish <gnome-fi-laatu@lists.sourceforge.net>\n"
-"Language: fi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: application/x-publican; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: fi\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Virtaal 0.6.1\n"
 
@@ -22,9 +22,7 @@ msgstr "Tarvitsemme palautetta!"
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
-msgstr ""
-"<primary>palaute</primary> <secondary>tämän oppaan tekijöiden "
-"yhteystiedot</secondary>"
+msgstr "<primary>palaute</primary> <secondary>tämän oppaan tekijöiden yhteystiedot</secondary>"
 
 #. Tag: para
 #, no-c-format
