--- a/publican/datadir/Common_Content/common/nl-NL/Feedback.po
+++ b/publican/datadir/Common_Content/common/nl-NL/Feedback.po
@@ -4,14 +4,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 0\n"
-"POT-Creation-Date: 2010-09-28T06:49:34\n"
+"POT-Creation-Date: 2010-12-01T22:56:38\n"
 "PO-Revision-Date: 2010-09-29 19:18+0200\n"
 "Last-Translator: Geert Warrink <geert.warrink@onsnet.nu>\n"
 "Language-Team: Fedora\n"
-"Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: application/x-publican; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: nl\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Virtaal 0.6.1\n"
 
@@ -23,9 +23,7 @@ msgstr "We hebben terugkoppeling nodig!"
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
-msgstr ""
-"<primary>terugkoppeling</primary> <secondary>contact informatie voor deze "
-"handleiding</secondary>"
+msgstr "<primary>terugkoppeling</primary> <secondary>contact informatie voor deze handleiding</secondary>"
 
 #. Tag: para
 #, no-c-format
