clean up README
git-svn-id: file:///srv/svn/publican/trunk@1679 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/Changes
+++ b/publican/Changes
@@ -1,9 +1,10 @@
 2.6  Thu Dec 09 2010 
   - Catch FOP failing. BZ #661551
   - Update Changes file. BZ #661568
+  - Cleaned up README file.
 
 2.5  Fri Dec 02 2010 
-  - Use SPEC_VERSION for splash page spec files.
+  - Use SPEC_VERSION for splash page spec files
   - Force removal of old packages
 
 2.4  Thu Dec 02 2010 
