catch some bad practices that create invalid packages
git-svn-id: file:///srv/svn/publican/trunk@1682 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/Changes
+++ b/publican/Changes
@@ -2,6 +2,8 @@
   - Catch FOP failing. BZ #661551
   - Update Changes file. BZ #661568
   - Cleaned up README file.
+  - Catch empty tags that break packaging. (abstract, subtitle)
+  - Add rpmlint check for mock builds.
   - corrected document conventions text. BZ#651616
 
 2.5  Fri Dec 02 2010 
