Make XmlClean use File::Inplace instead of grep & sed. BZ #661567
git-svn-id: file:///srv/svn/publican/trunk@1687 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/Changes
+++ b/publican/Changes
@@ -7,6 +7,7 @@
   - Corrected document conventions text. BZ#651616
   - Add update_db action to allow more robust packaging. BZ #661948
   - Fix show_unknown not working. BZ #662162
+  - Make XmlClean use File::Inplace instead of grep & sed. BZ #661567
 
 2.5  Fri Dec 02 2010 
   - Use SPEC_VERSION for splash page spec files
