--- a/publican/Changes
+++ b/publican/Changes
@@ -2,13 +2,15 @@
   - Catch FOP failing. BZ #661551
   - Update Changes file. BZ #661568
   - Cleaned up README file.
-  - Catch empty tags that break packaging. (abstract, subtitle)
-  - Add rpmlint check for mock builds.
+  - Catch empty tags that break packaging. (abstract, subtitle) BZ #663206
+  - Add rpmlint check for mock builds. BZ #663203
   - Corrected document conventions text. BZ#651616
   - Add update_db action to allow more robust packaging. BZ #661948
   - Fix show_unknown not working. BZ #662162
   - Make XmlClean use File::Inplace instead of grep & sed. BZ #661567
-  - Fix command example in PUG BZ #663211
+  - Removed auto addition of '-0' to invalid revnumber.
+  - Deleted STRICT mode. Added banned_tags and banned_attrs configurations BZ #663202
+  - Fix command example in PUG. BZ #663211
 
 2.5  Fri Dec 02 2010 
   - Use SPEC_VERSION for splash page spec files
