--- a/publican/Changes
+++ b/publican/Changes
@@ -11,6 +11,7 @@
   - Removed auto addition of '-0' to invalid revnumber.
   - Deleted STRICT mode. Added banned_tags and banned_attrs configurations BZ #663202
   - Fix command example in PUG. BZ #663211
+  - Fix web menu localisation being lost on rebuild from package. BZ #662897
 
 2.5  Fri Dec 02 2010 
   - Use SPEC_VERSION for splash page spec files
