Use revision history for edition and release. BZ #642127 Deleted edition and release config parameters. BZ #642127
git-svn-id: file:///srv/svn/publican/trunk@1692 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/Changes
+++ b/publican/Changes
@@ -1,4 +1,4 @@
-2.6  Thu Dec 09 2010 
+2.6  Wed Dec 15 2010 UNRELEASED
   - Catch FOP failing. BZ #661551
   - Update Changes file. BZ #661568
   - Cleaned up README file.
@@ -9,9 +9,11 @@
   - Fix show_unknown not working. BZ #662162
   - Make XmlClean use File::Inplace instead of grep & sed. BZ #661567
   - Removed auto addition of '-0' to invalid revnumber.
-  - Deleted STRICT mode. Added banned_tags and banned_attrs configurations BZ #663202
+  - Deleted STRICT mode. Added banned_tags and banned_attrs configurations. BZ #663202
   - Fix command example in PUG. BZ #663211
   - Fix web menu localisation being lost on rebuild from package. BZ #662897
+  - Use revision history for edition and release. BZ #642127
+  - Deleted edition and release config parameters. BZ #642127
 
 2.5  Fri Dec 02 2010 
   - Use SPEC_VERSION for splash page spec files
