--- a/publican/Changes
+++ b/publican/Changes
@@ -16,6 +16,7 @@
   - Deleted edition and release config parameters. BZ #642127
   - Add add_revision action and associated options. BZ #642127
   - Have XmlClean treat address element as verbatim. BZ #662907
+  - Fix task missing ID. BZ #672439
 
 2.5  Fri Dec 02 2010 
   - Use SPEC_VERSION for splash page spec files
