--- a/publican/Changes
+++ b/publican/Changes
@@ -17,6 +17,7 @@
   - Add add_revision action and associated options. BZ #642127
   - Have XmlClean treat address element as verbatim. BZ #662907
   - Fix task missing ID. BZ #672439
+  - Fix UTF8 issue in TXT output. BZ #673855
 
 2.5  Fri Dec 02 2010 
   - Use SPEC_VERSION for splash page spec files
