Fix wrong BuildRequires and path for desktop packages. BZ #676472
git-svn-id: file:///srv/svn/publican/trunk@1711 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/Changes
+++ b/publican/Changes
@@ -18,6 +18,7 @@
   - Have XmlClean treat address element as verbatim. BZ #662907
   - Fix task missing ID. BZ #672439
   - Fix UTF8 issue in TXT output. BZ #673855
+  - Fix wrong BuildRequires and path for desktop packages. BZ #676472
 
 2.5  Fri Dec 02 2010 
   - Use SPEC_VERSION for splash page spec files
