fix typos BZ #676997
git-svn-id: file:///srv/svn/publican/trunk@1713 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/Changes
+++ b/publican/Changes
@@ -19,6 +19,7 @@
   - Fix task missing ID. BZ #672439
   - Fix UTF8 issue in TXT output. BZ #673855
   - Fix wrong BuildRequires and path for desktop packages. BZ #676472
+  - Correct typos. Yuri Chornoivan <yurchor@ukr.net> BZ #676997
 
 2.5  Fri Dec 02 2010 
   - Use SPEC_VERSION for splash page spec files
