--- a/publican/Changes
+++ b/publican/Changes
@@ -20,6 +20,7 @@
   - Fix UTF8 issue in TXT output. BZ #673855
   - Fix wrong BuildRequires and path for desktop packages. BZ #676472
   - Correct typos. Yuri Chornoivan <yurchor@ukr.net> BZ #676997
+  - Fix CreateBook texts missing from pot file. BZ #677119
 
 2.5  Fri Dec 02 2010 
   - Use SPEC_VERSION for splash page spec files
