Add --TEST_PO_MERGE to update_po for testing
git-svn-id: file:///srv/svn/publican/trunk@1719 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/README
+++ b/publican/README
@@ -1,5 +1,14 @@
 README for Publican
 
+Publican is a DocBook publication system, not just a DocBook processing tool.
+As well as ensuring your DocBook XML is valid, publican works to ensure
+your XML is up to publishable standard.
+
+Web:  http://publican.fedorahosted.org/
+Mail: https://www.redhat.com/mailman/listinfo/publican-list
+Source: http://svn.fedorahosted.org/svn/publican
+Bugs: https://bugzilla.redhat.com/bugzilla/enter_bug.cgi?product=Publican
+
 Assumptions: DocBook xml, *nix, en-US source language.
 
 Q: What actions are there?
