Added base_brand config option for brands to allow multiple base brands. Fix startinglinenumber ignored & XML entites not being escaped. BZ #653432
git-svn-id: file:///srv/svn/publican/trunk@1724 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/Changes
+++ b/publican/Changes
@@ -22,6 +22,8 @@
   - Correct typos. Yuri Chornoivan <yurchor@ukr.net> BZ #676997
   - Fix CreateBook texts missing from pot file. BZ #677119
   - Add --TEST_PO_MERGE to update_po for testing.
+  - Added base_brand config option for brands to allow multiple base brands.
+  - Fix startinglinenumber ignored & XML entites not being escaped. BZ #653432
 
 2.5  Fri Dec 02 2010 
   - Use SPEC_VERSION for splash page spec files
