Fix perl critic encoding cheack failing. BZ #684509
git-svn-id: file:///srv/svn/publican/trunk@1732 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/Changes
+++ b/publican/Changes
@@ -25,6 +25,7 @@
   - Added base_brand config option for brands to allow multiple base brands.
   - Fix startinglinenumber ignored & XML entites not being escaped. BZ #653432
   - Added site config toc_type to allow selecting TOC styles.
+  - Fix perl critic encoding cheack failing. BZ #684509
 
 2.5  Fri Dec 02 2010 
   - Use SPEC_VERSION for splash page spec files
