''' fix sooooomeset validation errors.. Bz #6733402
git-svn-id: file:///srv/svn/publican/trunk@1735 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/Changes
+++ b/publican/Changes
@@ -27,6 +27,7 @@
   - Added site config toc_type to allow selecting TOC styles.
   - Fix perl critic encoding cheack failing. BZ #684509
   - Added authortest target for author tests.
+  - Fix  some set validation errors. BZ #673402
 
 2.5  Fri Dec 02 2010 
   - Use SPEC_VERSION for splash page spec files
