Add --msgmerge to update_po to override using internal POT/PO merging.
git-svn-id: file:///srv/svn/publican/trunk@1736 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/Changes
+++ b/publican/Changes
@@ -21,13 +21,13 @@
   - Fix wrong BuildRequires and path for desktop packages. BZ #676472
   - Correct typos. Yuri Chornoivan <yurchor@ukr.net> BZ #676997
   - Fix CreateBook texts missing from pot file. BZ #677119
-  - Add --TEST_PO_MERGE to update_po for testing.
+  - Add --msgmerge to update_po to override using internal POT/PO merging.
   - Added base_brand config option for brands to allow multiple base brands.
   - Fix startinglinenumber ignored & XML entites not being escaped. BZ #653432
   - Added site config toc_type to allow selecting TOC styles.
   - Fix perl critic encoding cheack failing. BZ #684509
   - Added authortest target for author tests.
-  - Fix  some set validation errors. BZ #673402
+  - Fix some set validation errors. BZ #673402
 
 2.5  Fri Dec 02 2010 
   - Use SPEC_VERSION for splash page spec files
