Truncate PO Fuzzy/Un-transtaled message, added PO line number.
git-svn-id: file:///srv/svn/publican/trunk@1741 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/Changes
+++ b/publican/Changes
@@ -29,6 +29,7 @@
   - Added authortest target for author tests.
   - Fix some set validation errors. BZ #673402
   - Purge Site statistics, site tech and HTML site map.
+  - Truncate PO Fuzzy/Un-transtaled message, added PO line number.
 
 2.5  Fri Dec 02 2010 
   - Use SPEC_VERSION for splash page spec files
