Fix packaging of stand alone sets. BZ #689347
git-svn-id: file:///srv/svn/publican/trunk@1743 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/Changes
+++ b/publican/Changes
@@ -32,6 +32,7 @@
   - Truncate PO Fuzzy/Un-transtaled message, added PO line number.
   - Add keep_id to steps.
   - Add Author_Group.xml handling for translations.
+  - Fix packaging of stand alone sets. BZ #689347
 
 2.5  Fri Dec 02 2010 
   - Use SPEC_VERSION for splash page spec files
