--- a/publican/Changes
+++ b/publican/Changes
@@ -33,6 +33,7 @@
   - Add keep_id to steps.
   - Add Author_Group.xml handling for translations.
   - Fix packaging of stand alone sets. BZ #689347
+  - Update docbook-style-xsl req to 1.76.1 for epub change.
 
 2.5  Fri Dec 02 2010 
   - Use SPEC_VERSION for splash page spec files
