Switch normal output to STDOUT, added croak call. BZ #688447
git-svn-id: file:///srv/svn/publican/trunk@1751 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/Changes
+++ b/publican/Changes
@@ -34,6 +34,7 @@
   - Add Author_Group.xml handling for translations.
   - Fix packaging of stand alone sets. BZ #689347
   - Update docbook-style-xsl req to 1.76.1 for epub change.
+  - Switch normal output to STDOUT, added croak call. BZ #688447
 
 2.5  Fri Dec 02 2010 
   - Use SPEC_VERSION for splash page spec files
