--- a/publican/Changes
+++ b/publican/Changes
@@ -35,6 +35,7 @@
   - Fix packaging of stand alone sets. BZ #689347
   - Update docbook-style-xsl req to 1.76.1 for epub change.
   - Switch normal output to STDOUT, added croak call. BZ #688447
+  - Added mainfile parameter. BZ #688585
 
 2.5  Fri Dec 02 2010 
   - Use SPEC_VERSION for splash page spec files
