Split pod from publican command to allow auto-generation
git-svn-id: file:///srv/svn/publican/trunk@1754 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/Changes
+++ b/publican/Changes
@@ -36,6 +36,7 @@
   - Update docbook-style-xsl req to 1.76.1 for epub change. BZ #697382
   - Switch normal output to STDOUT, added croak call. BZ #688447
   - Added mainfile parameter. BZ #688585
+  - Split pod from publican command to allow auto-generation.
 
 2.5  Fri Dec 02 2010 
   - Use SPEC_VERSION for splash page spec files
