Add rename action. BZ #694698
git-svn-id: file:///srv/svn/publican/trunk@1758 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/Changes
+++ b/publican/Changes
@@ -38,6 +38,7 @@
   - Added mainfile parameter. BZ #688585
   - Split pod from publican command to allow auto-generation.
   - Update BZ links to point to Publican component.
+  - Add rename action. BZ #694698
 
 2.5  Fri Dec 02 2010 
   - Use SPEC_VERSION for splash page spec files
