Enable override RPM site config. BZ #695545
git-svn-id: file:///srv/svn/publican/trunk@1763 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/Changes
+++ b/publican/Changes
@@ -63,6 +63,7 @@
   - Remove Red elements from interactive.css. BZ #650950
   - Added support for home page site_overrides.css file.  BZ #650950
   - Add check for outdated SRPMS.
+  - Enable override RPM site config. BZ #695545
 
 2.3  Tue Oct 26 2010 
   - Prepend product name to product/version splash pages.
