saner Changes date
git-svn-id: file:///srv/svn/publican/trunk@1769 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/Changes
+++ b/publican/Changes
@@ -1,4 +1,4 @@
-3.0  Wed Dec 15 2010                UNRELEASED
+3.0  UNRELEASED
   - Catch FOP failing. BZ #661551
   - Update Changes file. BZ #661568
   - Cleaned up README file.
