--- a/publican/Changes
+++ b/publican/Changes
@@ -40,6 +40,7 @@
   - Update BZ links to point to Publican component.
   - Add rename action. BZ #694698
   - Added detection of mixed_mode tags to XmlClean. BZ #688286
+  - Fix version 0 not installing on web site. BZ #702550
 
 2.5  Fri Dec 02 2010 
   - Use SPEC_VERSION for splash page spec files
